--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "moralis": "^1.9.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.0",
+    "web3uikit": "^0.1.159"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "prettier": "^2.7.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
